export interface Room {
    id: string;
    name: string;
    location: string;
}